tests/invalid_types/more_dups.hk
extern fun putchar(n: I32);

fun putchar(n: I32){}


fun main() I32{
    putchar(12);
    return 0;
}

#[
<fail>
]#